# structured_template

./: .gitignore  .replit  README.md  api_client.py  app.py  auth.py  database.py  main.py  object_storage.py  pyproject.toml  requirements.txt  sample_videos.py  streamlit_app.py  tiu_resume_processor_normal.py  utils.py  video_processor.py
